test unitarios core y redis